--- a/src/Main/Employees/employeepage.fxml
+++ b/src/Main/Employees/employeepage.fxml
@@ -6,23 +6,65 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.control.Label?>
 
-<AnchorPane prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Main.Employees.EmployeePageController">
+<AnchorPane prefHeight="500.0" prefWidth="800.0" stylesheets="@../Main.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Main.Employees.EmployeePageController">
    <children>
       <JFXTabPane layoutX="239.0" layoutY="153.0" prefHeight="500.0" prefWidth="800.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <tabs>
             <Tab text="Add Customer">
               <content>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <Label layoutX="239.0" layoutY="73.0" text="FULL NAME :" />
+                        <Label layoutX="241.0" layoutY="147.0" prefHeight="19.0" prefWidth="63.0" text="EMAIL :" />
+                        <Label layoutX="240.0" layoutY="185.0" prefHeight="19.0" prefWidth="49.0" text="CITY :" />
+                        <Label layoutX="239.0" layoutY="110.0" prefHeight="19.0" prefWidth="39.0" text="AGE :" />
+                        <Label layoutX="239.0" layoutY="226.0" text="ADDRESS :" />
+                        <Label layoutX="240.0" layoutY="265.0" text="POSTAL ADDRESS:" />
+                        <TextField layoutX="377.0" layoutY="70.0" prefHeight="25.0" prefWidth="168.0" />
+                        <TextField layoutX="377.0" layoutY="107.0" prefHeight="25.0" prefWidth="167.0" />
+                        <TextField layoutX="377.0" layoutY="144.0" prefHeight="25.0" prefWidth="166.0" />
+                        <TextField layoutX="375.0" layoutY="182.0" prefHeight="25.0" prefWidth="169.0" />
+                        <TextField layoutX="375.0" layoutY="223.0" prefHeight="25.0" prefWidth="168.0" />
+                        <TextField layoutX="375.0" layoutY="262.0" prefHeight="25.0" prefWidth="168.0" />
+                        <JFXButton layoutX="348.0" layoutY="350.0" prefHeight="46.0" prefWidth="83.0" styleClass="sidebtn" text="SAVE" />
+                     </children></AnchorPane>
               </content>
             </Tab>
             <Tab text="Cutomer Details">
               <content>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <TableView prefHeight="471.0" prefWidth="800.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                          <columns>
+                            <TableColumn prefWidth="131.0" text="FULL NAME" />
+                            <TableColumn prefWidth="73.0" text="AGE" />
+                              <TableColumn prefWidth="181.0" text="EMAIL" />
+                              <TableColumn prefWidth="116.0" text="CITY" />
+                              <TableColumn prefWidth="170.0" text="ADDRESS" />
+                              <TableColumn prefWidth="128.0" text="POSTAL ADDRESS" />
+                          </columns>
+                        </TableView>
+                     </children></AnchorPane>
               </content>
             </Tab>
             <Tab text="Transactions">
               <content>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <BorderPane prefHeight="471.0" prefWidth="800.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                           <bottom>
+                              <AnchorPane prefHeight="91.0" prefWidth="800.0" BorderPane.alignment="CENTER" />
+                           </bottom>
+                           <center>
+                              <TableView prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+                                <columns>
+                                  <TableColumn prefWidth="75.0" text="C1" />
+                                  <TableColumn prefWidth="75.0" text="C2" />
+                                </columns>
+                              </TableView>
+                           </center>
+                        </BorderPane>
+                     </children></AnchorPane>
               </content>
             </Tab>
          </tabs>
