--- a/src/Main/Employees/employeepage.fxml
+++ b/src/Main/Employees/employeepage.fxml
@@ -82,15 +82,15 @@
                            <bottom>
                               <AnchorPane fx:id="bottomTransaction" prefHeight="106.0" prefWidth="800.0" BorderPane.alignment="CENTER">
                                  <children>
-                                    <TextField  onKeyReleased="#searchTrans" fx:id="code_search" layoutX="14.0" layoutY="33.0" prefHeight="25.0" prefWidth="118.0" promptText="code_search" />
-                                    <TextField   onKeyReleased="#searchTrans" fx:id="from_search" layoutX="229.0" layoutY="33.0" prefHeight="25.0" prefWidth="118.0" />
-                                    <TextField   onKeyReleased="#searchTrans" fx:id="to_search" layoutX="366.0" layoutY="33.0" prefHeight="25.0" prefWidth="118.0" />
-                                    <TextField  onKeyReleased="#searchTrans" fx:id="amount_search" layoutX="522.0" layoutY="33.0" prefHeight="25.0" prefWidth="118.0" />
-                                    <TextField   onKeyReleased="#searchTrans"  fx:id="date_search" layoutX="659.0" layoutY="33.0" prefHeight="25.0" prefWidth="118.0" />
-                                    <JFXButton onAction="#cleartransacionSearch" layoutX="366.0" layoutY="65.0" prefHeight="32.0" prefWidth="63.0" styleClass="sidebtn" text="clear" />
+                                    <TextField fx:id="code_search" layoutX="14.0" layoutY="33.0" onKeyReleased="#searchTrans" prefHeight="25.0" prefWidth="118.0" promptText="code_search" />
+                                    <TextField fx:id="from_search" layoutX="229.0" layoutY="33.0" onKeyReleased="#searchTrans" prefHeight="25.0" prefWidth="118.0" />
+                                    <TextField fx:id="to_search" layoutX="366.0" layoutY="33.0" onKeyReleased="#searchTrans" prefHeight="25.0" prefWidth="118.0" />
+                                    <TextField fx:id="amount_search" layoutX="522.0" layoutY="33.0" onKeyReleased="#searchTrans" prefHeight="25.0" prefWidth="118.0" />
+                                    <TextField fx:id="date_search" layoutX="659.0" layoutY="33.0" onKeyReleased="#searchTrans" prefHeight="25.0" prefWidth="118.0" />
+                                    <JFXButton layoutX="366.0" layoutY="65.0" onAction="#cleartransacionSearch" prefHeight="32.0" prefWidth="63.0" styleClass="sidebtn" text="clear" />
                                     <Label layoutX="45.0" layoutY="14.0" text="CODE" />
                                     <Label layoutX="255.0" layoutY="14.0" text="FROM" />
-                                     <ComboBox  fx:id="type_choose" layoutX="143.0" layoutY="33.0" prefHeight="25.0" prefWidth="69.0" promptText="Type" visibleRowCount="3"/>
+                                     <ComboBox fx:id="type_choose" layoutX="143.0" layoutY="33.0" prefHeight="25.0" prefWidth="69.0" promptText="Type" visibleRowCount="3" />
                                     <Label layoutX="400.0" layoutY="14.0" text="TO" />
                                     <Label layoutX="560.0" layoutY="15.0" text="AMOUNT" />
                                     <Label layoutX="702.0" layoutY="14.0" text="DATE" />
@@ -109,6 +109,21 @@
                               </TableView>
                            </center>
                         </BorderPane>
+                     </children></AnchorPane>
+              </content>
+            </Tab>
+            <Tab text="change password">
+              <content>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <PasswordField fx:id="oldpass" layoutX="407.0" layoutY="141.0" onKeyReleased="#changePassKeyEntered" prefHeight="25.0" prefWidth="164.0" />
+                        <Label layoutX="227.0" layoutY="144.0" prefHeight="19.0" prefWidth="116.0" text="Old Password :" />
+                        <Label layoutX="227.0" layoutY="190.0" prefHeight="19.0" prefWidth="103.0" text="New Password :" />
+                        <Label layoutX="227.0" layoutY="236.0" prefHeight="19.0" prefWidth="155.0" text="Confirm New Password :" />
+                        <PasswordField fx:id="newpass" layoutX="407.0" layoutY="187.0" onKeyReleased="#changePassKeyEntered" prefHeight="25.0" prefWidth="165.0" />
+                        <PasswordField fx:id="confirmpass" layoutX="407.0" layoutY="233.0" onKeyReleased="#changePassKeyEntered" prefHeight="25.0" prefWidth="164.0" />
+                        <JFXButton fx:id="changeBtn" disable="true" layoutX="343.0" layoutY="320.0" onAction="#changePassword" prefHeight="33.0" prefWidth="87.0" styleClass="sidebtn" text="Change" />
+                        <Label fx:id="change_info" layoutX="257.0" layoutY="74.0" prefHeight="30.0" prefWidth="347.0" />
                      </children></AnchorPane>
               </content>
             </Tab>
